@@ -20,14 +20,15 @@ use P6C::Tree;
 use P6C::Parser;
 
 use vars qw($IMCC $ASM $PARROT $PBC2C $HERE $CD $VERSION $PERL $slash $exe);
-use vars qw($PARROT_ROOT $O_FILES @temp_files $LIB);
-$VERSION = '0.08';
+use vars qw($PARROT_ROOT @temp_files $LIB $TEST_GLOB $TEST_IMPORT);
+$VERSION = '0.09';
 
 do 'perl6-config' or	# read pconfig, which was generated by Makefile
 die "'perl6-config' not found: $!";
 
 $slash = $PConfig{slash};
 $exe = $PConfig{exe};
+$LIB = $PConfig{a};
 # somewhen we need install paths
 $IMCC   = "..${slash}imcc${slash}imcc";
 $PERL	= $PConfig{perl};
@@ -35,6 +36,11 @@ $ASM    = "$PERL ..${slash}..${slash}assemble.pl";
 $PARROT = "$PARROT_ROOT${slash}parrot$exe";
 $CD = "cd $PARROT_ROOT; ";
 $PBC2C = "$CD $PERL pbc2c.pl";
+#
+# imported meth's for Test::More
+$TEST_IMPORT = 'skip is';
+# glob pattern for test to run
+$TEST_GLOB = 't/{compiler,rx}/*.t';
 
 sub usage($) {
     my $fh = shift;
@@ -43,6 +49,7 @@ sub usage($) {
     [ asm-options ] [ run-options ]
     [ global-options ] file [arguments ... ]
 	    perl6 --clean *.p6
+	    perl6 --test [testfiles]
 
     p6c-options:
 
@@ -65,6 +72,8 @@ sub usage($) {
     --clean          delete all possible produced files for all mentioned
     		     .p6 source file
 
+    --test	     run tests like "make test"
+
     Parse::RecDescent control:
     --trace          set $::RD_TRACE (or construct trace-enabled parser)
     --grammar NAME   use precompiled grammar NAME (default = Perl6grammar)
@@ -81,6 +90,8 @@ sub usage($) {
     imcc-options:
 
     --debug          write various debug messages to STDERR
+    --yydebug        debug bison
+    --verbose	     shows count of lines compiled
 
     asm-options:
 
@@ -117,10 +128,10 @@ use vars '%o';
 
 Getopt::Long::Configure(qw(bundling));
 GetOptions(\%o,qw{
-    test-parser
+    test-parser test
     trace hitem tree raw-tree
     add-main rule=s grammar=s force-grammar
-    debug
+    debug yydebug life-info
     debug-info|g
     verbose|v+
     warnings|w+
@@ -156,7 +167,13 @@ $o{tree} = 1 if $o{'test-parser'};
 my $filebase = 'a';		# basename for output files.
 
 ######## run parser and following steps
-run();
+
+if ($o{test}) {
+    run_tests();
+}
+else {
+    run();
+}
 clean_temps();
 ########
 
@@ -265,7 +282,6 @@ sub mydie($$) {
 #
 sub output_tree {
     my $tree = shift;
-    my $x = $tree->tree;
     my $file = shift;
     my $fw = shift || 0;
     if ($o{tree}) {
@@ -278,6 +294,7 @@ sub output_tree {
 	verbose(2, "Dump tree to '$tf'");
 	open(OUT, ">$tf") or die("Can't write '$tf': $!");
 	print OUT Dumper($tree) if ($o{'raw-tree'});
+	my $x = $tree->tree;
 	print OUT Dumper($x);
 	close OUT;
     } else {
@@ -285,6 +302,7 @@ sub output_tree {
 	    P6C::IMCC::add_function('main');
 	    P6C::IMCC::set_function('main');
 	}
+	my $x = $tree->tree;
 	verbose(2, "compiling tree");
 	warnings(sub { P6C::IMCC::compile($x) }, $fw);
 	my $f = "$filebase.imc";
@@ -364,6 +382,14 @@ sub pbc_is_newer($) {
     return $mpbc >= $mp6;
 }
 
+sub p6_is_newer($) {
+    my $base = shift;
+    my $mp6  = (stat("$base.p6"))[9];
+    my $test;
+    ($test = $base) =~ s/_\d+$//;
+    my $mt  = (stat("$test.t"))[9];
+    return $mp6 >= $mt;
+}
 sub run {
     my $parser;
 
@@ -411,6 +437,96 @@ sub run {
 }
 
 
+# run tests like "make test"
+sub output_is($$;$);
+sub run_tests {
+    my @testfiles = @ARGV ? @ARGV : glob($TEST_GLOB);
+    undef $/;
+    my $parser = get_parser();
+    *output_is = sub($$;$) {
+	my ($test, $out, $desc) = @_;
+	my $n = Test::Builder->current_test+1;
+	print STDERR "$n ";
+	$filebase =~ s/(?:_\d+)?$/_$n/;
+	my $fw = "$filebase.warn";
+	my $result = warnings(sub {
+	    $parser->$::rule($test,0,'-')}, $fw);
+	my $file = "$filebase.p6";
+	my $outf = "$filebase.out";
+	$ARGV[0] = "> $outf";
+	if ($o{quick} && -e "$filebase.pbc" &&
+	    -e "$filebase.p6" &&
+	    p6_is_newer($filebase) &&
+	    pbc_is_newer($filebase)) {
+	    pass4("$filebase.pbc", $fw);
+	}
+	else {
+	    # reinit IMCC
+	    P6C::IMCC::init();
+	    # write .p6 file for reuse
+	    # XXX if --keep only ??
+	    open(OUT, ">$file");
+	    print OUT $test;
+	    close(OUT);
+	    # run all steps
+	    output_tree($result, $file, $fw);
+	}
+	# XXX should we delete test.out, test.warn?
+	open(IN, $outf) or warn("Can't read '$outf': $!");
+	my $res = <IN>;
+	close(IN);
+	$res =~ s/\cM//g;
+	$out =~ s/\cM//g;
+	# send result to Test::Builder
+	is ($res, $out, $desc);
+    };
+    $|=1;
+    my $Test;
+    my @tests;
+    print "Test details:\n";
+    eval(<<EOF);
+    use Test::Builder;
+    use Test::More;
+    \$Test = Test::Builder->new();
+EOF
+    for my $f (@testfiles) {
+	open (IN, $f) or die("Can't read '$f': $!");
+	my $contents = <IN>;
+	close(IN);
+	($filebase = $f) =~ s/\.[^.]*$//;
+	my ($i, $nr, $ok, $nok) = (0)x4;
+	my $ntot;
+	print STDERR "$f ... ";
+	# get # of tests from 'tests => ...'
+	# and delete all use .. TEST ... stuff
+	if ($contents =~ s/use\s+.*?tests\s*=>\s*(\d+).*?[\r\n]+//) {
+	    $ntot = $1;
+	}
+	# set file name for test results
+	my $fh = $Test->output("$filebase.test");
+	push(@tests, "$filebase.test");
+	# print header for Test::Harness
+	print $fh "#!perl\n";
+	print $fh qq(print <<"EOF";\n);
+	$Test->plan(tests => $ntot, import => [qw($TEST_IMPORT)]);
+	# reset test counter
+	$Test->current_test(0);
+	$contents =~ s/use\s+TEST.*?[\r\n]+//;
+	eval(<<"EOFTEST");
+	$contents
+EOFTEST
+        print STDERR ("\n");
+	print STDERR $@ if($@);
+	# end footer
+	print $fh "EOF\n";
+	# close .test file, else last one is missing below
+	close($fh);
+    }
+
+    print "\nTest summary:\n";
+    system($PERL, "t/harness", @tests);
+}
+
 sub run_interactive {
     my $in;
     # Delay loading Term::ReadLine if we don't need it.
@@ -453,8 +569,8 @@ END
 sub pass2($$) {
     my $file = shift;
     my $fw = shift;
-    my $debug = ''; # XXX defined $o{'debug-info'} ? '-g' : '';
-    $debug = defined $o{debug} ? '--debug' : $debug; # --debug implies -g
+    my $debug = join(' ', map { defined $o{$_} && $o{$_} ? "--$_" : '' }
+	qw(debug yydebug verbose life-info));
     my $outfile = "$filebase.pasm";
     my $cmd = "$IMCC $debug $file $outfile";
     verbose(1, $cmd);
@@ -522,8 +638,6 @@ sub pass4($$) {
 	if (system($cmd)) {
 	    mydie($?, $cmd);
 	}
-	# XXX Configure lacks options for Win
-	#
 	# XXX running --shared needs
 	#
 	# export LD_LIBRARY_PATH=../../blib/lib
@@ -541,7 +655,7 @@ sub pass4($$) {
 	}
 	$filebase = "./$filebase" if($filebase !~ m!/!); # XXX and unix
 	verbose(1, "running $filebase @ARGV");
-	if (system($filebase, @ARGV) && !$o{'ignore-exitcode'}) {
+	if (system("$filebase @ARGV") && !$o{'ignore-exitcode'}) {
 	    mydie($?, $filebase);
 	}
 	unlink($filebase) if (-e $filebase && $o{'rm-exe'});
@@ -565,6 +679,10 @@ perl6 - perl6 driver program
 
 perl6 [ p6c-options ] [ imcc-options ] [ asm-options ]
       [ run-options ] [ global-options ] file ...
+
+perl6 --clean *.p6
+
+perl6 --test [testfiles...]
 
 =head1 DESCRIPTION
 
@@ -625,6 +743,11 @@ to --keep. E.g.
 
 	perl6 file.p6 --clean --keep-exe
 
+=item --test
+
+Run tests like "make test". As the program startup and parser generation
+are done only once, with this option, tests run much faster.
+
 =item --test-parser
 
 Interactive parser-testing mode. The parser enter an interaktive mode, an
@@ -648,7 +771,7 @@ Set $::RD_TRACE. You know what it is, when you want this.
 
 =item --hitem
 
-Keep track of %item hash. Item.
+Keep track of %item hash.
 (only useful when constructing parser)
 
 =item --force-grammar
@@ -683,6 +806,10 @@ Start with rule NAME (default = 'prog')
 =item --debug
 
 Write various debug messages to STDERR.
+
+=item --yydebug
+
+Show bison's debug output
 
 =back
 
@@ -827,10 +954,13 @@ The following files may be generated too:
 	file	 ...  with option -C or
 	file.exe      depending on $^O
 
+	file.out  ... perl6 --test result file
+	file.test ... perl6 --test Test::Harness input
+
 Additionally the following files are cleaned by --clean
 
 	file.trace	$ ../../parrot -t file.pbc 2> file.trace
-	file.diss	$ ../../disasselbe file.pbc > file.diss
+	file.diss	$ ../../disassemble file.pbc > file.diss
 
 If STDIN in processed, the filebase "a" will be used.
 
